--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Bryanna711/ReadMe_Generator#readme",
   "dependencies": {
+    "badge-maker": "^3.3.1",
     "inquirer": "^8.2.0"
   }
 }
